--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
         tools:targetApi="31" >
         <activity
             android:name=".SettingActivity"
+            android:theme="@style/Theme1"
             android:exported="false" />
         <activity
             android:name=".ChatingActivity"
+            android:theme="@style/Theme1"
             android:exported="false" />
         <activity
             android:name=".SignUpActivity"
